--- a/src/main/resources/templates/Main.html
+++ b/src/main/resources/templates/Main.html
@@ -12,43 +12,45 @@
 <body>
     <header>
         <nav class="headerContainer">
-            <div class="headerImg">
-                <a href="/" alt="SOJU">
-                    <img src="/img/logo_mate.png" class="mainLogo">
-                </a>
-            </div>
-
             <div class="headerMenu">
                 <div class="headerMenuLeft">
 
-                    <div class="categoryMenu">
-                        <span>스터디원</span>
-                        <div class="dropTable">
-                            <a class="dropRecruitStudy dropMenu" href="/recruitstudy">스터디원 모집</a>
-                            <a class="dropRecruitMentor dropMenu" href="/recruitmentorlist">멘토 모집</a>
-                            <a class="dropMentorProfile dropMenu" href="/mentorprofilelist">멘토 프로필</a>
-                        </div>
+                    <div class="headerImg">
+                        <a href="/" alt="SOJU">
+                            <img src="/img/logo_mate.png" class="mainLogo">
+                        </a>
                     </div>
 
-                    <div class="categoryMenu">
-                        <a href="/meta" class="metaMenu">
-                            <span class="categoryMenu">스터디룸</span>
-                        </a>
-                    </div>
-                    <div class="categoryMenu">
-                        <a href="/noticeroom" class="noticeRoomMenu">
-                            <span class="categoryMenu">게시판</span>
-                        </a>
-                    </div>
-                    <div class="categoryMenu">
-                        <a href="/store" class="storeMenu">
-                            <span class="categoryMenu">스토어</span>
-                        </a>
-                    </div>
-                    <div class="categoryMenu">
-                        <a href="/mypage" class="myPageMenu">
-                            <span class="categoryMenu">마이페이지</span>
-                        </a>
+                    <div class="menuContainer">
+                        <div class="categoryMenu">
+                            <span>스터디원</span>
+                            <div class="dropTable">
+                                <a class="dropRecruitStudy dropMenu" href="/recruitstudy">스터디원 모집</a>
+                                <a class="dropRecruitMentor dropMenu" href="/recruitmentorlist">멘토 모집</a>
+                                <a class="dropMentorProfile dropMenu" href="/mentorprofilelist">멘토 프로필</a>
+                            </div>
+                        </div>
+
+                        <div class="categoryMenu">
+                            <a href="/meta">
+                                <span>스터디룸</span>
+                            </a>
+                        </div>
+                        <div class="categoryMenu">
+                            <a href="/noticeroom">
+                                <span>게시판</span>
+                            </a>
+                        </div>
+                        <div class="categoryMenu">
+                            <a href="/store">
+                                <span>스토어</span>
+                            </a>
+                        </div>
+                        <div class="categoryMenu">
+                            <a href="/mypage">
+                                <span>마이페이지</span>
+                            </a>
+                        </div>
                     </div>
                 </div>
 
@@ -226,7 +228,7 @@
 
     <div class="bestStudyContainer">
         <div class="BestTitle">
-            <span>지금 가장 인기있는 스터디</span>
+            <a href="/">지금 가장 인기있는 스터디&nbsp;&nbsp></a>
         </div>
         <div class="bestStudySlides">
             <ul class="bestStudyInner">
@@ -353,7 +355,7 @@
 
     <div class="bestMentorContainer">
         <div class="BestTitle">
-            <span>요즘 주목받는 멘토</span>
+            <a href="/">요즘 주목받는 멘토&nbsp;&nbsp;></a>
         </div>
         <div class="bestMentorSlides">
             <ul class="bestStudyInner">
