--- a/src/main/resources/templates/SignUp/LoginForm.html
+++ b/src/main/resources/templates/SignUp/LoginForm.html
@@ -5,12 +5,15 @@
     <title>로그인</title>
     <meta name="google-signin-client_id" content="-6t8ghsdrabmgh8vfsnimpofjnmmgcocn.apps.googleusercontent.com">
     <link rel="stylesheet" type="text/css" href="/css/login.css">
+    <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square-neo.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
-        <a class="mainLogo" href="/" alt="SOJU">
+    <div class="mainLogo">
+        <a href="/" alt="SOJU">
             <img src="/img/logo_mate.png" class="mainLogoImg">
         </a>
+    </div>
     <div class="loginForm">
         <form action="/loginform/login" method="post">
             <div>
