--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -27,33 +27,36 @@ footer{
 .logo_div{
     height: 30px;
     width: 70px;
-    object-fit: contain;
+}
+.logo{
+    width: 100%;
+    height: 100%;
 }
 .left_ul{
     margin: 0px;
 }
 .left_element{
     height: 20px;
-     margin-right: 5px;
+    margin-right: 5px;
 }
 .left_text{
-     font-size: 8.5px;
+    font-size: 8.5px;
 }
 
 .footer_right{
-     display-inline: block;
-     margin-left: 50px;
+    display-inline: block;
+    margin-left: 50px;
 }
 .contact_icon{
-     width: 40px;
-     height: 40px;
-     margin-right: 20px;
+    width: 40px;
+    height: 40px;
+    margin-right: 20px;
 }
 .contact_icon:hover{
     opacity:0.2;
 }
 .footer_right p{
-     font-size: 20px;
-     font-weight: bold;
-     margin: 0px;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 0px;
 }
