--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -7,22 +7,6 @@ body{
     margin: 0 auto;
     padding: 0px;
 }
-img{
-    width: 100%;
-    height: 100%;
-}
-body{
-    display: block;
-}
-header{
-    position:fixed;
-    padding-top: 10px;
-    width: 70%;
-    height: 80px;
-    background-color: white;
-    border-bottom: 5px solid #57B862;
-    z-index: 2;
-}
 *{
     font-family: 'NanumSquareNeo';
 }
@@ -30,70 +14,68 @@ a{
     text-decoration-line: none;
     color: black;
 }
-.scrolledDown {
-    box-shadow: 0 10px 10px 1px rgba(0, 0, 0, 0.54);
-}
 
+
+header{
+    position: fixed;
+    padding-top: 10px;
+    width: 70%;
+    height: 80px;
+    background-color: white;
+    border-bottom: 4px solid #507e2d;
+    z-index: 2;
+    box-shadow: 0 2px 4px 0 hsla(0,0%,80.8%,.5);
+}
 .headerContainer{
     padding-top: 20px;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
 }
+
 .headerImg{
-    height: 70px;
-    width: 110px;
-    margin-right: 15px;
+    height: 50px;
+    width: 100px;
+    margin : 5px 15px;
 }
 .mainLogo{
-    object-fit: contain;
+    height: 100%;
+    width: 100%;
 }
+
 .headerMenu{
     display: flex;
 }
 .headerMenuLeft{
     display: flex;
+    height: 60px;
+    padding-bottom: 10px;
+}
+.menuContainer{
+    display: flex;
+    width: auto;
 }
 .categoryMenu{
-    width: 100px;
+    width: auto;
     height: 40px;
-    margin: auto;
-    line-height: 40px;
+    padding: 20px 10px;
     text-align: center;
-    font-size: large;
+    font-size: 19px;
     cursor : pointer;
     position : relative;
     display : inline-block;
+    white-space: nowrap;
 }
 
 .categoryMenu:hover{
-    color: #57b862;
+    color: #507e2d;
 }
-
-
-.headerMenuRight{
-    display: flex;
-    float: right;
-    margin: auto;
-    padding-top: 1.5px;
+.categoryMenu a:hover{
+    color: #507e2d;
 }
-
-.whenLogin{
-    display: flex;
-    margin-left: 180px;
-}
-.welcome{
-    margin: auto;
-    text-align: right;
-    width: 250px;
-}
-.notificationsMenu{
-    margin-left: 10px;
-}
-.btnLogin{
-    margin-left: 15px;
-}
-
 .dropTable{
-    margin: 0px 5px 5px 5px;
+    margin: 14px 0px;
     cursor : pointer;
     position : absolute;
     z-index : 1;
@@ -105,22 +87,48 @@ a{
 }
 .dropTable a{
     display : block;
-    padding: 13px 10px;
+    padding: 15px 10px;
 }
 .categoryMenu:hover .dropTable{
     display: block;
 }
 .dropTable a:hover{
     background-color : #ececec;
+    font-weight: bold;
+}
+
+
+.headerMenuRight{
+    display: flex;
+    height: 60px;
+    align-items: center;
+    width: 600px;
+    justify-content: flex-end;
+}
+
+.whenLogin{
+    display: flex;
+}
+.welcome{
+    margin: auto;
+    text-align: right;
+}
+.notificationsMenu{
+    margin-left: 10px;
+}
+.btnLogin{
+    margin-left: 15px;
 }
 .inputButtonLogin{
     height: 30px;
     font-size: 15px;
-    background-color: #57B862;
+    background-color: #507e2d;
+    color: white;
     border: none;
     border-radius: 10px;
     cursor: pointer;
 }
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 .notificationsMenu{
     cursor: pointer;
