--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -85,7 +85,7 @@
 
 
 .bestStudyContainer, .bestMentorContainer{
-    width: 1184px;
+    width: 100%;
     height: 450px;
     position: relative;
     overflow: hidden;
