--- a/src/main/resources/templates/SignUp/FindPwd.html
+++ b/src/main/resources/templates/SignUp/FindPwd.html
@@ -5,21 +5,29 @@
     <meta charset="UTF-8">
     <title>비밀번호 찾기</title>
     <link rel="stylesheet" type="text/css" href="/css/join_find.css">
+    <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square-neo.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
+    <div class="container smallContainer">
+        <div class="mainLogo">
+            <a href="/" alt="SOJU">
+                <img src="/img/logo_mate.png" class="mainLogoImg">
+            </a>
+        </div>
         <h2>비밀번호 찾기</h2>
         <form action="/loginform/findpwdform" method="post" th:object="${memberDTO}">
-            <ul class="ulJoinForm">
-                <input id="hEmailCheck" type="hidden">
-                <input id="hEmailKey" type="hidden">
-                <li class="liJoinInput"><label class="labelText">아이디</label><br><input th:field="*{emailId}" class="inputText" type="text" placeholder="이메일 주소">
-                                                                                     <input type="button" value="인증번호 전송" class="btnJoinForm" onclick="sendEmail(this.form)"></li>
-                <li class="liJoinInput"><label class="labelText">인증번호 입력 </label><br><input id="emailKey" class="inputText" type="text" placeholder="인증번호">
-                                                                                     <input type="button" value="인증번호 확인" class="btnJoinForm" onclick="checkNum()"></li>
-                <li class="liJoinInput"><label class="labelText">이름</label><br><input th:field="*{name}" class="inputText" type="text" placeholder="이름"></li>
-                <li class="liJoinInput"><label class="labelText">핸드폰번호</label><br><input th:field="*{phoneNumber}" class="inputText" type="text" placeholder="핸드폰번호(하이픈'-'없이)"></li>
-            </ul>
+            <div class="joinFormContainer">
+                <ul>
+                    <input id="hEmailCheck" type="hidden">
+                    <input id="hEmailKey" type="hidden">
+                    <li class="liJoinInput"><label class="labelText">아이디</label><br><input th:field="*{emailId}" class="inputText" type="text" placeholder="이메일 주소">
+                                                                                         <input type="button" value="인증번호 전송" class="btnJoinForm" onclick="sendEmail(this.form)"></li>
+                    <li class="liJoinInput"><label class="labelText">인증번호 입력 </label><br><input id="emailKey" class="inputText" type="text" placeholder="인증번호">
+                                                                                         <input type="button" value="인증번호 확인" class="btnJoinForm" onclick="checkNum()"></li>
+                    <li class="liJoinInput"><label class="labelText">이름</label><br><input th:field="*{name}" class="inputText" type="text" placeholder="이름"></li>
+                    <li class="liJoinInput"><label class="labelText">핸드폰번호</label><br><input th:field="*{phoneNumber}" class="inputText" type="text" placeholder="핸드폰번호(하이픈'-'없이)"></li>
+                </ul>
+            </div>
             <div class="divBtnJoin">
                 <input type="button" value="비밀번호 재설정" class="btnJoin" onclick="findPwd(this.form)">
                 <input type="button" value="취소하기" class="btnJoin" onclick="location.href='/loginform'">
