--- a/src/main/resources/templates/SignUp/JoinForm.html
+++ b/src/main/resources/templates/SignUp/JoinForm.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>회원가입 페이지</title>
     <link rel="stylesheet" type="text/css" href="/css/join_find.css">
+    <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square-neo.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -14,52 +15,56 @@
             <input id="hEmailKey" type="hidden">
             <input id="hNickname" type="hidden">
             <input id="hPhoneCheck" type="hidden">
-            <a class="mainLogo" href="/" alt="SOJU">
-                <img src="/img/logo_mate.png" class="mainLogoImg">
-            </a>
+            <div class="mainLogo">
+                <a href="/" alt="SOJU">
+                    <img src="/img/logo_mate.png" class="mainLogoImg">
+                </a>
+            </div>
             <h2>회원가입</h2>
-            <ul class="ulJoinForm">
-                <li class="liJoinInput"><label class="labelText">아이디 </label><br><input th:field="*{emailId}" class="inputText" placeholder="이메일 주소" type="text">
-                                                                                         <input type="button" value="인증번호 전송" class="btnJoinForm" onclick="sendEmail(this.form)"></li>
-                <li class="liJoinInput"><label class="labelText">인증번호 입력 </label><br><input id="emailKey" class="inputText" placeholder="인증번호" type="text">
-                                                                                         <input type="button" value="인증번호 확인" class="btnJoinForm" onclick="checkNum()"></li>
+            <div class="joinFormContainer">
+                <ul>
+                    <li class="liJoinInput"><label class="labelText">아이디 </label><br><input th:field="*{emailId}" class="inputText" placeholder="이메일 주소" type="text">
+                                                                                             <input type="button" value="인증번호 전송" class="btnJoinForm" onclick="sendEmail(this.form)"></li>
+                    <li class="liJoinInput"><label class="labelText">인증번호 입력 </label><br><input id="emailKey" class="inputText" placeholder="인증번호" type="text">
+                                                                                             <input type="button" value="인증번호 확인" class="btnJoinForm" onclick="checkNum()"></li>
 
-                <li class="liJoinInput"><label class="labelText">비밀번호 </label><br><input th:field="*{pwd}" type="password" class="inputText" placeholder="영문, 숫자, 특수기호를 포함하여 5자리 이상" oninput="pwdCheck(this.form)"><br></li>
-                <li class="liJoinInput"><label id="pwdText1" class="errorMsg"></label></li>
-                <li class="liJoinInput"><label class="labelText">비밀번호 확인 </label><br><input id="pwd2" type="password" class="inputText" placeholder="영문, 숫자, 특수기호를 포함하여 5자리 이상" oninput="pwdCheck2(this.form)"><br></li>
-                <li class="liJoinInput"><label id="pwdText2" class="errorMsg"></label></li>
+                    <li class="liJoinInput"><label class="labelText">비밀번호 </label><br><input th:field="*{pwd}" type="password" class="inputText" placeholder="영문, 숫자, 특수기호를 포함하여 5자리 이상" oninput="pwdCheck(this.form)"><br></li>
+                    <li class="liJoinInput"><label id="pwdText1" class="errorMsg"></label></li>
+                    <li class="liJoinInput"><label class="labelText">비밀번호 확인 </label><br><input id="pwd2" type="password" class="inputText" placeholder="영문, 숫자, 특수기호를 포함하여 5자리 이상" oninput="pwdCheck2(this.form)"><br></li>
+                    <li class="liJoinInput"><label id="pwdText2" class="errorMsg"></label></li>
 
-                <li class="liJoinInput"><label class="labelText">닉네임(별명) </label><br><input th:field="*{nickname}" class="inputText" placeholder="10자 이내 닉네임" type="text">
-                                                                                        <input type="button" value="중복확인" class="btnJoinForm" onclick="checkNickname(this.form)"><br></li>
-                <li class="liJoinInput"><label id="nicknameCheck" class="errorMsg"></label></li>
+                    <li class="liJoinInput"><label class="labelText">닉네임(별명) </label><br><input th:field="*{nickname}" class="inputText" placeholder="10자 이내 닉네임" type="text">
+                                                                                            <input type="button" value="중복확인" class="btnJoinForm" onclick="checkNickname(this.form)"><br></li>
+                    <li class="liJoinInput"><label id="nicknameCheck" class="errorMsg"></label></li>
 
-                <li class="liJoinInput"><label class="labelText">성별 </label><br><label class="genderLabel">남</label><input th:field="*{gender}" type="radio" value="M">
-                                                                                 <label class="genderLabel">여</label><input th:field="*{gender}" type="radio" value="F"></li>
+                    <li class="liJoinInput"><label class="labelText">성별 </label><br><label class="genderLabel">남</label><input th:field="*{gender}" type="radio" value="M">
+                                                                                     <label class="genderLabel">여</label><input th:field="*{gender}" type="radio" value="F"></li>
 
-                <li class="liJoinInput"><label class="labelText">이름 </label><br><input th:field="*{name}" class="inputText" placeholder="이름" type="text"></li>
+                    <li class="liJoinInput"><label class="labelText">이름 </label><br><input th:field="*{name}" class="inputText" placeholder="이름" type="text"></li>
 
-                <li class="liJoinInput"><label class="labelText">생일 </label><br><input th:field="*{birthday}" class="inputText" type="date" style="color: #757575; font-size: 15px;"></li>
+                    <li class="liJoinInput"><label class="labelText">생일 </label><br><input th:field="*{birthday}" class="inputText" type="date" style="color: #757575; font-size: 15px;"></li>
 
-                <li class="liJoinInput"><label class="labelText">휴대전화 </label><br><input th:field="*{phoneNumber}" type="tel" class="inputText" placeholder="휴대전화">
-                                                                                    <input id="btnPhone" value="인증하기" class="btnJoinForm" type="button"></li>
+                    <li class="liJoinInput"><label class="labelText">휴대전화 </label><br><input th:field="*{phoneNumber}" type="tel" class="inputText" placeholder="휴대전화">
+                                                                                        <input id="btnPhone" value="인증하기" class="btnJoinForm" type="button"></li>
 
-                <li class="liJoinInput"><label class="labelText">주소 </label><br><input th:field="*{address}" class="inputText" type="text" placeholder="주소">
-                                                                             <input id="btnAddress" type="button" class="btnJoinForm" value="주소찾기"></li>
-                <li class="liJoinInput"><label class="labelText">상세주소 </label><br><input th:field="*{detailAddress}" class="inputText" type="text" placeholder="상세주소"></li>
+                    <li class="liJoinInput"><label class="labelText">주소 </label><br><input th:field="*{address}" class="inputText" type="text" placeholder="주소">
+                                                                                 <input id="btnAddress" type="button" class="btnJoinForm" value="주소찾기"></li>
+                    <li class="liJoinInput"><label class="labelText">상세주소 </label><br><input th:field="*{detailAddress}" class="inputText" type="text" placeholder="상세주소"></li>
 
-                <li class="liJoinInput"><label class="labelText">관심분야 </label><br><select class="studyType" th:field="*{studyType}">  <option value="">관심분야</option>
-                                                                                                                      <option value="computer">컴퓨터 / IT</option>
-                                                                                                                      <option value="math">수학</option>
-                                                                                                                      <option value="management">경영 / 마케팅</option>
-                                                                                                                      <option value="design">디자인</option>
-                                                                                                                      <option value="education">교육</option>
-                                                                                                                      <option value="literature">문학</option>
-                                                                                                                      <option value="engineering">공학</option>
-                                                                                                                      <option value="language">언어</option>
-                                                                                                                      <option value="employment">취업</option>
-                                                                                                                      <option value="entrance">입시</option>
-                                                                                                                      <option value="etc">기타</option></select></li>
-            </ul>
+                    <li class="liJoinInput"><label class="labelText">관심분야 </label><br><select class="studyType" th:field="*{studyType}">  <option value="">관심분야</option>
+                                                                                                                          <option value="computer">컴퓨터 / IT</option>
+                                                                                                                          <option value="math">수학</option>
+                                                                                                                          <option value="management">경영 / 마케팅</option>
+                                                                                                                          <option value="design">디자인</option>
+                                                                                                                          <option value="education">교육</option>
+                                                                                                                          <option value="literature">문학</option>
+                                                                                                                          <option value="engineering">공학</option>
+                                                                                                                          <option value="language">언어</option>
+                                                                                                                          <option value="employment">취업</option>
+                                                                                                                          <option value="entrance">입시</option>
+                                                                                                                          <option value="etc">기타</option></select></li>
+                </ul>
+            </div>
             <div class="divBtnJoin">
                 <input type="button" value="가입" class="btnJoin" onclick="join(this.form)">
                 <input type="button" value="취소" class="btnJoin" onclick="location.href='/loginform'">
