--- a/src/main/resources/templates/MyPage/ResetMyPwd.html
+++ b/src/main/resources/templates/MyPage/ResetMyPwd.html
@@ -107,8 +107,6 @@
                         </div>
                     </div>
 
-
-
                     <div class="whenLogin" sec:authorize="isAnonymous()">
                         <div class="welcome"></div>
                         <div class="notificationsMenu" onclick="location.href='/mypage/alarm'" style="visibility: hidden;">
@@ -213,8 +211,10 @@
             </div>
         </div>
     </footer>
-
 <!--JS----------------------------------------------------------------------------------------------------------------->
+    <!-- Ajax사용을 위한 js를 추가 -->
+    <script src="/js/httpRequest.js"></script>
+
     <script>
         var acc = document.getElementsByClassName("accordion");
         var i;
@@ -231,7 +231,7 @@
             });
         }
     </script>
-    <script src="/js/httpRequest.js"></script>
+
     <script>
         //비밀번호 형식 제한
         function pwdCheck(f) {
@@ -239,14 +239,14 @@
             let pwdText1 = document.getElementById("pwdText1");
 
             let pattern1 = /[0-9]/; // 숫자 입력
-			let pattern2 = /[a-zA-Z]/; // 영어 소문자, 대문자 입력
-			let pattern3 = /[~!@#$%^&*()_+]/; // 특수기호 입력
+            let pattern2 = /[a-zA-Z]/; // 영어 소문자, 대문자 입력
+            let pattern3 = /[~!@#$%^&*()_+]/; // 특수기호 입력
 
-			if ( !pattern1.test(pwd) || !pattern2.test(pwd) || !pattern3.test(pwd) || pwd.length < 5 ) {
-			    pwdText1.innerHTML = "영문, 숫자, 특수기호(~!@#$%^&*()_+)를 포함하여 5자리 이상으로 구성하여야 합니다";
-			} else {
-			    pwdText1.innerHTML = "";
-			}
+            if ( !pattern1.test(pwd) || !pattern2.test(pwd) || !pattern3.test(pwd) || pwd.length < 5 ) {
+                pwdText1.innerHTML = "영문, 숫자, 특수기호(~!@#$%^&*()_+)를 포함하여 5자리 이상으로 구성하여야 합니다";
+            } else {
+                pwdText1.innerHTML = "";
+            }
         }
 
         function pwdCheck2(f) {
@@ -261,6 +261,7 @@
             }
         }
     </script>
+
     <script>
         function resetPwd(f) {
             let emailId = f.emailId.value;
@@ -268,10 +269,10 @@
             let pwd2 = f.pwd2.value;
 
             let pattern1 = /[0-9]/; // 숫자 입력
-			let pattern2 = /[a-zA-Z]/; // 영어 소문자, 대문자 입력
-			let pattern3 = /[~!@#$%^&*()_+]/; // 특수기호 입력
+            let pattern2 = /[a-zA-Z]/; // 영어 소문자, 대문자 입력
+            let pattern3 = /[~!@#$%^&*()_+]/; // 특수기호 입력
 
-			//비밀번호
+            //비밀번호
             if ( pwd == '' ) {
                 alert("비밀번호를 입력하세요");
                 return;
@@ -283,11 +284,11 @@
             }
             //pwd 형식
             if ( !pattern1.test(pwd) || !pattern2.test(pwd) || !pattern3.test(pwd) || pwd.length < 5 ) {
-			    alert("비밀번호 형식을 확인해주세요");
-			    return;
-			}
-			// 비밀번호 확인
-			if ( pwd != pwd2 ) {
+                alert("비밀번호 형식을 확인해주세요");
+                return;
+            }
+            // 비밀번호 확인
+            if ( pwd != pwd2 ) {
                 alert("비밀번호 확인이 비밀번호와 일치하지 않습니다.");
                 return;
             }
@@ -298,7 +299,6 @@
                         "&pwd=" + pwd;
             sendRequest(url, param, ResultResetPwd, "POST");
         }
-
         function ResultResetPwd () {
             if ( xhr.readyState == 4 && xhr.status == 200 ) {
                 let data = xhr.responseText;
@@ -306,12 +306,13 @@
             }
         }
     </script>
+
     <script>
         const icon = document.querySelector('.icon');
         const notiDrop = document.querySelector('.notiDrop');
         let status = 0; //0이면 클릭 안된 상태, 1이면 클릭 된 상태
 
-        function open(e){
+        function menuOpen(e){
             if ( e == 1 ){
                 notiDrop.style.display = "block";
             } else {
@@ -321,10 +322,10 @@
         icon.addEventListener('click', function () {
             if( status == 0 ){
                 status = 1;
-                open(status);
+                menuOpen(status);
             } else{
                 status = 0;
-                open(status);
+                menuOpen(status);
             }
         });
     </script>
