--- a/src/main/resources/templates/SignUp/ResetPwd.html
+++ b/src/main/resources/templates/SignUp/ResetPwd.html
@@ -30,9 +30,10 @@
             </div>
         </form>
     </div>
-
 <!--JS----------------------------------------------------------------------------------------------------------------->
+    <!-- Ajax사용을 위한 js를 추가 -->
     <script src="/js/httpRequest.js"></script>
+
     <script>
         //비밀번호 형식 제한
         function pwdCheck(f) {
@@ -40,14 +41,14 @@
             let pwdText1 = document.getElementById("pwdText1");
 
             let pattern1 = /[0-9]/; // 숫자 입력
-			let pattern2 = /[a-zA-Z]/; // 영어 소문자, 대문자 입력
-			let pattern3 = /[~!@#$%^&*()_+]/; // 특수기호 입력
+            let pattern2 = /[a-zA-Z]/; // 영어 소문자, 대문자 입력
+            let pattern3 = /[~!@#$%^&*()_+]/; // 특수기호 입력
 
-			if ( !pattern1.test(pwd) || !pattern2.test(pwd) || !pattern3.test(pwd) || pwd.length < 5 ) {
-			    pwdText1.innerHTML = "영문, 숫자, 특수기호(~!@#$%^&*()_+)를 포함하여 5자리 이상으로 구성하여야 합니다";
-			} else {
-			    pwdText1.innerHTML = "";
-			}
+            if ( !pattern1.test(pwd) || !pattern2.test(pwd) || !pattern3.test(pwd) || pwd.length < 5 ) {
+                pwdText1.innerHTML = "영문, 숫자, 특수기호(~!@#$%^&*()_+)를 포함하여 5자리 이상으로 구성하여야 합니다";
+            } else {
+                pwdText1.innerHTML = "";
+            }
         }
 
         function pwdCheck2(f) {
@@ -62,6 +63,7 @@
             }
         }
     </script>
+
     <script>
         function resetPwd(f) {
             let emailId = f.emailId.value;
@@ -69,10 +71,10 @@
             let pwd2 = f.pwd2.value;
 
             let pattern1 = /[0-9]/; // 숫자 입력
-			let pattern2 = /[a-zA-Z]/; // 영어 소문자, 대문자 입력
-			let pattern3 = /[~!@#$%^&*()_+]/; // 특수기호 입력
+            let pattern2 = /[a-zA-Z]/; // 영어 소문자, 대문자 입력
+            let pattern3 = /[~!@#$%^&*()_+]/; // 특수기호 입력
 
-			//비밀번호
+            //비밀번호
             if ( pwd == '' ) {
                 alert("비밀번호를 입력하세요");
                 return;
@@ -84,22 +86,20 @@
             }
             //pwd 형식
             if ( !pattern1.test(pwd) || !pattern2.test(pwd) || !pattern3.test(pwd) || pwd.length < 5 ) {
-			    alert("비밀번호 형식을 확인해주세요");
-			    return;
-			}
-			// 비밀번호 확인
-			if ( pwd != pwd2 ) {
+                alert("비밀번호 형식을 확인해주세요");
+                return;
+            }
+            // 비밀번호 확인
+            if ( pwd != pwd2 ) {
                 alert("비밀번호 확인이 비밀번호와 일치하지 않습니다.");
                 return;
             }
-
 
             let url = "/loginform/findpwdform/resetpwdform/resetpwd";
             let param = "emailId=" + emailId +
                         "&pwd=" + pwd;
             sendRequest(url, param, ResultResetPwd, "POST");
         }
-
         function ResultResetPwd () {
             if ( xhr.readyState == 4 && xhr.status == 200 ) {
                 let data = xhr.responseText;
